[package]
name = "cbonsai"
version = "1.0.0"
edition = "2021"
description = "终端ASCII盆景生成CLI工具"
license = "MIT"

[[bin]]
name = "cbonsai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
colored = "2.1"
crossterm = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
